@@ -30,6 +30,7 @@
 <a href="CoreTypes/permissions.html">Permissions</a><br>
 <a href="CoreTypes/propertyset.html">PropertySet</a><br>
 <a href="CoreTypes/redirector.html">I/O Redirectors</a><br>
+<a href="CoreTypes/regexp.html">Regexp</a><br>
 <a href="CoreTypes/selectors.html">Selectors</a><br>
 <a href="CoreTypes/xmlcatalog.html">XMLCatalog</a><br>
 <a href="CoreTypes/zipfileset.html">ZipFileSet</a><br>
